# NutriStore

./: .gitignore  README.md  opencode.txt
.atl/: skill-registry.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ee17ef4fb83_initial.py  6d85258a3988_add_gramos_field_to_productos.py  ef2cc72dbacf_add_cliente_email_to_pedidos.py
backend/app/: config.py  database.py  dependencies.py  email_service.py  main.py
backend/app/carrito/: router.py  schemas.py  service.py
backend/app/envios/: router.py  schemas.py  service.py
backend/app/models/: __init__.py  admin.py  categoria.py  envio.py  imagen.py  pago.py  pedido.py  pedido_item.py  producto.py
backend/app/pedidos/: router.py  schemas.py  service.py
backend/app/productos/: router.py  schemas.py  service.py
backend/app/usuarios/: router.py  schemas.py  service.py
backend/scripts/: seed.py  seed_productos.py
backend/tests/: conftest.py  test_alembic.py  test_auth.py  test_carrito.py  test_envios.py  test_models.py  test_pedidos.py  test_productos.py
frontend/: carrito.html  index.html  netlify.toml  pedido.html
frontend/admin/: dashboard.html  login.html
frontend/css/: style.css
frontend/js/: admin.js  app.js  cart.js  config.js
openspec/: config.yaml
openspec/changes/archive/2026-05-11-backend-foundation/: proposal.md
openspec/changes/backend-foundation/: design.md  tasks.md
openspec/changes/frontend-landing/: design.md  proposal.md  tasks.md
openspec/specs/pagos/: spec.md
(+11 files in other folders)
